2008-07-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-setinputstate:): Disable new code,
	as it does not work on KDE 4.

2008-07-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-setinputfocus:): For EWMH window
	managers set the user time before requesting focus.
	* Source/x11/XGServerWindow.m (-setinputstate:): For EWMH window
	managers set active window status.
	Based on patch by Hubert Chathi <hubert@uhoreg.ca>.

2008-06-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Use a runtime
	version check and adjust from > to >= 1.6.0.
	* Source/cairo/CairoFontInfo.m (-setupAttributes): Slightly better
	error checks. 

2008-06-14  Adam Fedor  <fedor@gnu.org>

	* Version 0.14.0

2008-06-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m,
	* Source/x11/XGDragView.m: Convert X event millisecond timestamp
	to NSEvent second timestamp.

2008-05-25  Adam Fedor  <fedor@gnu.org>

	* Revert library license version to 2 until applications
	can be converted

2008-06-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Don't use special
	clip adjustment for cairo > 1.6.0, as this got fixed there.

2008-06-01 18:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/x11/XGGeneric.h:
	* Source/x11/XGServerWindow.m: Added code to automatically make 
	any window which uses the NSDesktopWindowLevel also be omnipresent.
	This capability will be added as a style later.

2008-05-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Avoid double
	allocation of dashes memory.
	* Source/gsc/GSGState.m (-DPSrectfill::::, -DPSrectstroke::::,
	-DPSrectclip::::): Don't use autoreleased objects.

2008-05-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (check_modifier,
	-receivedEvent:...): Faster checking for modifiers.

2008-05-27 Fred Kiefer <FredKiefer@gmx.de>
